--- a/index.html
+++ b/index.html
@@ -619,13 +619,10 @@ addUtilities({ ...rotateXUtilities, ...rotateYUtilities, ...rotateZUtilities });
                 <div>
                     <h4 class="text-white font-medium mb-4">Social</h4>
                     <div class="flex gap-4">
-                        <a href="#" class="group w-10 h-10 rounded-full bg-white/5 flex items-center justify-center text-[#9CA3AF] hover:bg-[#3B82F6] hover:text-white transition-all hover:scale-110 shadow-[0_0_10px_rgba(255,255,255,0.1)] hover:shadow-[0_0_15px_rgba(59,130,246,0.4)]">
+                        <a href="www.linkedin.com/company/osmoz-center/" class="group w-10 h-10 rounded-full bg-white/5 flex items-center justify-center text-[#9CA3AF] hover:bg-[#3B82F6] hover:text-white transition-all hover:scale-110 shadow-[0_0_10px_rgba(255,255,255,0.1)] hover:shadow-[0_0_15px_rgba(59,130,246,0.4)]">
                             <span class="iconify group-hover:scale-110 transition-transform" data-icon="lucide:linkedin" data-width="18"></span>
                         </a>
-                        <a href="#" class="group w-10 h-10 rounded-full bg-white/5 flex items-center justify-center text-[#9CA3AF] hover:bg-[#3B82F6] hover:text-white transition-all hover:scale-110 shadow-[0_0_10px_rgba(255,255,255,0.1)] hover:shadow-[0_0_15px_rgba(59,130,246,0.4)]">
-                            <span class="iconify group-hover:scale-110 transition-transform" data-icon="lucide:twitter" data-width="18"></span>
-                        </a>
-                        <a href="#" class="group w-10 h-10 rounded-full bg-white/5 flex items-center justify-center text-[#9CA3AF] hover:bg-[#3B82F6] hover:text-white transition-all hover:scale-110 shadow-[0_0_10px_rgba(255,255,255,0.1)] hover:shadow-[0_0_15px_rgba(59,130,246,0.4)]">
+                        <a href="https://www.instagram.com/osmoz.center" class="group w-10 h-10 rounded-full bg-white/5 flex items-center justify-center text-[#9CA3AF] hover:bg-[#3B82F6] hover:text-white transition-all hover:scale-110 shadow-[0_0_10px_rgba(255,255,255,0.1)] hover:shadow-[0_0_15px_rgba(59,130,246,0.4)]">
                             <span class="iconify group-hover:scale-110 transition-transform" data-icon="lucide:instagram" data-width="18"></span>
                         </a>
                     </div>
