--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html lang="fr" class="scroll-smooth"><head><meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Osmoz | L'IA pour Tous</title>
+<link rel="icon" type="image/png" href="image.png">
 <script src="https://cdn.tailwindcss.com"></script>
 <script src="https://code.iconify.design/3/3.1.0/iconify.min.js"></script>
 <style>
